fix: Drop max-height from status bar
This would cause the status bar to be clipped when it wraps on small
screens.

I'm not sure quite why we added it in the first place. Hopefully it's ok
to drop it.

--- a/css/popup.css
+++ b/css/popup.css
@@ -782,7 +782,6 @@
   margin-top: 3px;
   position: relative;
   width: 100%;
-  max-height: 3em;
   background: var(--status-bg);
 }
 
